worked on mobile responsive design and fixed some bugs

--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,13 @@
   }
 
 
-
-
   .text-outline {
     text-shadow: -1px -1px 0 #525252, 1px -1px 0 #525252, -1px 1px 0 #525252, 1px 1px 0 #525252;
   }
+
+  .text-outline-small {
+    text-shadow: -0.75px -1px 0 #525252, 0.75px -0.75px 0 #525252, -0.75px 0.75px 0 #525252, 0.75px 0.75px 0 #525252;
+  }
+
+  
 
